--- a/konkurs.ipynb
+++ b/konkurs.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "'Coat'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,109 +128,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1000\n",
-      "1719/1719 [==============================] - 14s 7ms/step - loss: 0.4572 - accuracy: 0.8395 - val_loss: 0.3577 - val_accuracy: 0.8770\n",
-      "Epoch 2/1000\n",
-      "1719/1719 [==============================] - 15s 9ms/step - loss: 0.3258 - accuracy: 0.8853 - val_loss: 0.3183 - val_accuracy: 0.8884\n",
-      "Epoch 3/1000\n",
-      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.2868 - accuracy: 0.8998 - val_loss: 0.2972 - val_accuracy: 0.8950\n",
-      "Epoch 4/1000\n",
-      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.2631 - accuracy: 0.9065 - val_loss: 0.2844 - val_accuracy: 0.9006\n",
-      "Epoch 5/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.2451 - accuracy: 0.9142 - val_loss: 0.2785 - val_accuracy: 0.9002\n",
-      "Epoch 6/1000\n",
-      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.2281 - accuracy: 0.9189 - val_loss: 0.2728 - val_accuracy: 0.9054\n",
-      "Epoch 7/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.2143 - accuracy: 0.9235 - val_loss: 0.2603 - val_accuracy: 0.9092\n",
-      "Epoch 8/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.2016 - accuracy: 0.9285 - val_loss: 0.2621 - val_accuracy: 0.9074\n",
-      "Epoch 9/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.1893 - accuracy: 0.9330 - val_loss: 0.2549 - val_accuracy: 0.9080\n",
-      "Epoch 10/1000\n",
-      "1719/1719 [==============================] - 11s 6ms/step - loss: 0.1799 - accuracy: 0.9361 - val_loss: 0.2535 - val_accuracy: 0.9144\n",
-      "Epoch 11/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.1692 - accuracy: 0.9398 - val_loss: 0.2583 - val_accuracy: 0.9108\n",
-      "Epoch 12/1000\n",
-      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.1628 - accuracy: 0.9420 - val_loss: 0.2906 - val_accuracy: 0.8968\n",
-      "Epoch 13/1000\n",
-      "1719/1719 [==============================] - 11s 6ms/step - loss: 0.1536 - accuracy: 0.9449 - val_loss: 0.2722 - val_accuracy: 0.9072\n",
-      "Epoch 14/1000\n",
-      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.1478 - accuracy: 0.9473 - val_loss: 0.2608 - val_accuracy: 0.9118\n",
-      "Epoch 15/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.1434 - accuracy: 0.9484 - val_loss: 0.2687 - val_accuracy: 0.9068\n",
-      "Epoch 16/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.1357 - accuracy: 0.9518 - val_loss: 0.2737 - val_accuracy: 0.9066\n",
-      "Epoch 17/1000\n",
-      "1719/1719 [==============================] - 11s 7ms/step - loss: 0.1325 - accuracy: 0.9523 - val_loss: 0.2630 - val_accuracy: 0.9172\n",
-      "Epoch 18/1000\n",
-      "1719/1719 [==============================] - 13s 8ms/step - loss: 0.1279 - accuracy: 0.9546 - val_loss: 0.2677 - val_accuracy: 0.9112\n",
-      "Epoch 19/1000\n",
-      "1719/1719 [==============================] - 12s 7ms/step - loss: 0.1222 - accuracy: 0.9566 - val_loss: 0.2818 - val_accuracy: 0.9096\n",
-      "Epoch 20/1000\n",
-      "1719/1719 [==============================] - 11s 6ms/step - loss: 0.1200 - accuracy: 0.9575 - val_loss: 0.2789 - val_accuracy: 0.9158\n"
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten (Flatten)           (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 300)               235500    \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 300)              1200      \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " activation (Activation)     (None, 300)               0         \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 300)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 100)               30100     \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 100)              400       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " activation_1 (Activation)   (None, 100)               0         \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 100)               0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 10)                1010      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 268,210\n",
+      "Trainable params: 267,410\n",
+      "Non-trainable params: 800\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/100\n",
+      "1719/1719 [==============================] - 10s 5ms/step - loss: 0.6637 - accuracy: 0.7759 - val_loss: 0.4257 - val_accuracy: 0.8450\n",
+      "Epoch 2/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.5038 - accuracy: 0.8219 - val_loss: 0.3904 - val_accuracy: 0.8538\n",
+      "Epoch 3/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.4696 - accuracy: 0.8334 - val_loss: 0.3811 - val_accuracy: 0.8600\n",
+      "Epoch 4/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.4479 - accuracy: 0.8395 - val_loss: 0.3882 - val_accuracy: 0.8534\n",
+      "Epoch 5/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.4354 - accuracy: 0.8444 - val_loss: 0.3638 - val_accuracy: 0.8678\n",
+      "Epoch 6/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.4236 - accuracy: 0.8479 - val_loss: 0.3439 - val_accuracy: 0.8762\n",
+      "Epoch 7/100\n",
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.4072 - accuracy: 0.8534 - val_loss: 0.3560 - val_accuracy: 0.8688\n",
+      "Epoch 8/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3983 - accuracy: 0.8562 - val_loss: 0.3477 - val_accuracy: 0.8680\n",
+      "Epoch 9/100\n",
+      "1719/1719 [==============================] - 10s 6ms/step - loss: 0.3904 - accuracy: 0.8593 - val_loss: 0.3438 - val_accuracy: 0.8756\n",
+      "Epoch 10/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3824 - accuracy: 0.8621 - val_loss: 0.3259 - val_accuracy: 0.8824\n",
+      "Epoch 11/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3734 - accuracy: 0.8647 - val_loss: 0.3294 - val_accuracy: 0.8792\n",
+      "Epoch 12/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3652 - accuracy: 0.8674 - val_loss: 0.3170 - val_accuracy: 0.8790\n",
+      "Epoch 13/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3674 - accuracy: 0.8677 - val_loss: 0.3067 - val_accuracy: 0.8874\n",
+      "Epoch 14/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3579 - accuracy: 0.8695 - val_loss: 0.3234 - val_accuracy: 0.8792\n",
+      "Epoch 15/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3562 - accuracy: 0.8706 - val_loss: 0.3082 - val_accuracy: 0.8864\n",
+      "Epoch 16/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3529 - accuracy: 0.8712 - val_loss: 0.3203 - val_accuracy: 0.8818\n",
+      "Epoch 17/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3529 - accuracy: 0.8714 - val_loss: 0.3144 - val_accuracy: 0.8830\n",
+      "Epoch 18/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3514 - accuracy: 0.8721 - val_loss: 0.3164 - val_accuracy: 0.8828\n",
+      "Epoch 19/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3506 - accuracy: 0.8723 - val_loss: 0.3502 - val_accuracy: 0.8802\n",
+      "Epoch 20/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3453 - accuracy: 0.8744 - val_loss: 0.3273 - val_accuracy: 0.8788\n",
+      "Epoch 21/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3381 - accuracy: 0.8787 - val_loss: 0.3050 - val_accuracy: 0.8840\n",
+      "Epoch 22/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3340 - accuracy: 0.8781 - val_loss: 0.3048 - val_accuracy: 0.8882\n",
+      "Epoch 23/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3340 - accuracy: 0.8804 - val_loss: 0.3195 - val_accuracy: 0.8816\n",
+      "Epoch 24/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3279 - accuracy: 0.8809 - val_loss: 0.3084 - val_accuracy: 0.8850\n",
+      "Epoch 25/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3316 - accuracy: 0.8796 - val_loss: 0.3008 - val_accuracy: 0.8868\n",
+      "Epoch 26/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3309 - accuracy: 0.8793 - val_loss: 0.3051 - val_accuracy: 0.8862\n",
+      "Epoch 27/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3229 - accuracy: 0.8826 - val_loss: 0.3030 - val_accuracy: 0.8886\n",
+      "Epoch 28/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3230 - accuracy: 0.8817 - val_loss: 0.2963 - val_accuracy: 0.8906\n",
+      "Epoch 29/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3183 - accuracy: 0.8850 - val_loss: 0.2989 - val_accuracy: 0.8904\n",
+      "Epoch 30/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3164 - accuracy: 0.8842 - val_loss: 0.2964 - val_accuracy: 0.8908\n",
+      "Epoch 31/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3123 - accuracy: 0.8842 - val_loss: 0.3003 - val_accuracy: 0.8884\n",
+      "Epoch 32/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.3113 - accuracy: 0.8874 - val_loss: 0.3050 - val_accuracy: 0.8866\n",
+      "Epoch 33/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.3160 - accuracy: 0.8857 - val_loss: 0.3014 - val_accuracy: 0.8908\n",
+      "Epoch 34/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.3044 - accuracy: 0.8890 - val_loss: 0.2914 - val_accuracy: 0.8942\n",
+      "Epoch 35/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.3028 - accuracy: 0.8887 - val_loss: 0.2942 - val_accuracy: 0.8928\n",
+      "Epoch 36/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.3065 - accuracy: 0.8894 - val_loss: 0.3116 - val_accuracy: 0.8896\n",
+      "Epoch 37/100\n",
+      "1719/1719 [==============================] - 7s 4ms/step - loss: 0.3101 - accuracy: 0.8877 - val_loss: 0.3137 - val_accuracy: 0.8838\n",
+      "Epoch 38/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3056 - accuracy: 0.8882 - val_loss: 0.2870 - val_accuracy: 0.8930\n",
+      "Epoch 39/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.3031 - accuracy: 0.8904 - val_loss: 0.2955 - val_accuracy: 0.8956\n",
+      "Epoch 40/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.3046 - accuracy: 0.8892 - val_loss: 0.3105 - val_accuracy: 0.8858\n",
+      "Epoch 41/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.3035 - accuracy: 0.8895 - val_loss: 0.2961 - val_accuracy: 0.8948\n",
+      "Epoch 42/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2989 - accuracy: 0.8905 - val_loss: 0.3089 - val_accuracy: 0.8906\n",
+      "Epoch 43/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.2984 - accuracy: 0.8908 - val_loss: 0.2959 - val_accuracy: 0.8916\n",
+      "Epoch 44/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2945 - accuracy: 0.8927 - val_loss: 0.2960 - val_accuracy: 0.8936\n",
+      "Epoch 45/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.2937 - accuracy: 0.8924 - val_loss: 0.3029 - val_accuracy: 0.8874\n",
+      "Epoch 46/100\n",
+      "1719/1719 [==============================] - 9s 5ms/step - loss: 0.2924 - accuracy: 0.8928 - val_loss: 0.2874 - val_accuracy: 0.8930\n",
+      "Epoch 47/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2886 - accuracy: 0.8932 - val_loss: 0.3180 - val_accuracy: 0.8800\n",
+      "Epoch 48/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2874 - accuracy: 0.8951 - val_loss: 0.2955 - val_accuracy: 0.8934\n",
+      "Epoch 49/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2872 - accuracy: 0.8947 - val_loss: 0.3067 - val_accuracy: 0.8874\n",
+      "Epoch 50/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2920 - accuracy: 0.8933 - val_loss: 0.2968 - val_accuracy: 0.8930\n",
+      "Epoch 51/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.2881 - accuracy: 0.8938 - val_loss: 0.3048 - val_accuracy: 0.8920\n",
+      "Epoch 52/100\n",
+      "1719/1719 [==============================] - 8s 5ms/step - loss: 0.2836 - accuracy: 0.8960 - val_loss: 0.3066 - val_accuracy: 0.8940\n",
+      "Epoch 53/100\n",
+      "1719/1719 [==============================] - 8s 4ms/step - loss: 0.2826 - accuracy: 0.8960 - val_loss: 0.3080 - val_accuracy: 0.8940\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2024b540d50>"
+       "<keras.callbacks.History at 0x1bd431ee410>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.layers import Activation\n",
+    "from keras.layers import Flatten\n",
+    "from keras.layers import Dropout\n",
+    "from keras.layers import BatchNormalization\n",
+    "from keras.callbacks import History\n",
+    "from keras.layers.convolutional import Conv2D, MaxPooling2D, AveragePooling2D\n",
     "keras.backend.clear_session()\n",
     "\n",
-    "cnn_history = History()\n",
+    "fully_connected_history = History()\n",
     "\n",
-    "cnn_model = Sequential()\n",
-    "cnn_model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
-    "cnn_model.add(MaxPooling2D((2, 2)))\n",
-    "cnn_model.add(Flatten())\n",
-    "cnn_model.add(Dense(10,activation=\"softmax\"))\n",
-    "cnn_model.compile(optimizer=\"adam\", loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "fully_connected_model = Sequential()\n",
+    "fully_connected_model.add(Flatten(input_shape=[28, 28]))\n",
+    "fully_connected_model.add(Dense(300, activation=\"relu\"))\n",
+    "fully_connected_model.add(BatchNormalization()),\n",
+    "fully_connected_model.add(Activation(\"relu\")),\n",
+    "fully_connected_model.add(Dropout(0.3)),\n",
+    "fully_connected_model.add(Dense(100, activation=\"relu\"))\n",
+    "fully_connected_model.add(BatchNormalization()),\n",
+    "fully_connected_model.add(Activation(\"relu\")),\n",
+    "fully_connected_model.add(Dropout(0.3)),\n",
+    "fully_connected_model.add(Dense(10, activation=\"softmax\"))\n",
+    "fully_connected_model.summary()\n",
     "\n",
-    "early_stopping = keras.callbacks.EarlyStopping(patience=10, monitor=\"val_loss\")\n",
-    "cnn_model.fit(X_train, y_train, epochs=1000,\n",
+    "fully_connected_model.compile(loss=\"sparse_categorical_crossentropy\",\n",
+    "              optimizer=\"adam\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "\n",
+    "early_stopping = keras.callbacks.EarlyStopping(patience=15, monitor=\"val_loss\")\n",
+    "fully_connected_model.fit(X_train, y_train, epochs=100,\n",
     "                    validation_data=(X_valid, y_valid), \n",
-    "                    callbacks=[cnn_history, early_stopping])"
+    "                    callbacks=[fully_connected_history, early_stopping])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 3ms/step - loss: 0.3021 - accuracy: 0.9050\n"
+      "313/313 [==============================] - 1s 2ms/step - loss: 0.3254 - accuracy: 0.8857\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.3021199107170105, 0.9049999713897705]"
+       "[0.32544824481010437, 0.885699987411499]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cnn_model.evaluate(X_test, y_test)\n"
+    "fully_connected_model.evaluate(X_test, y_test)\n"
    ]
   }
  ],
